[package]
name = "termios"
version = "0.2.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Safe bindings for the termios library."
license = "MIT"
homepage = "https://github.com/dcuddeback/termios-rs"
repository = "https://github.com/dcuddeback/termios-rs.git"
documentation = "http://dcuddeback.github.io/termios-rs/termios/"
readme = "README.md"
keywords = ["termios", "tty", "terminal", "posix"]

[dependencies]
libc = "0.1.5"

[target.arm-linux-androideabi.dependencies]
ioctl-rs = "0.1.3"

[target.aarch64-linux-androideabi.dependencies]
ioctl-rs = "0.1.3"

[target.mips64el-linux-androideabi.dependencies]
ioctl-rs = "0.1.3"

[target.mipsel-linux-androideabi.dependencies]
ioctl-rs = "0.1.3"
